--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -2,9 +2,9 @@
 
     <div fxFlex fxFill fxLayout="row" fxLayoutAlign="start center">
 
-        <div class="ml-48 my-8" fxFlex="1 0 auto" fxLayout="column" fxLayoutAlign="start start">
-            <div fxFlex class="h2">Dashoboard</div>
-            <div fxFlex fxLayoutAlign="start start">
+        <div class="ml-48 my-8" fxFlex="1 0 auto">
+            <div class="boldClass mt-8">Dashboard</div>
+            <div class="toolbarSubtitle">
                 <span class="dayColor h5 mr-12">{{CurrentDate | date:'EEEE'}},</span>
                 <span class="h5">{{CurrentDate | date:'dd MMMM yyyy'}}</span>
             </div>
