--- a/src/app/layout/components/toolbar/toolbar.component.html
+++ b/src/app/layout/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="p-0 mat-elevation-z1">
+<!-- <mat-toolbar class="p-0 mat-elevation-z1">
 
     <div fxFlex fxFill fxLayout="row" fxLayoutAlign="start center">
 
@@ -22,10 +22,10 @@
             <span class="username" fxHide fxShow.gt-sm>{{CurrentLoggedInUser}}</span>
             <img class="avatar1 mx-12" [src]="CurrentLoggedInUserProfile">
             <div class="toolbar-separator"></div>
-            <!-- <mat-icon class="mx-12 powerIconCls" svgIcon="powerIcon"></mat-icon> -->
             <mat-icon class="mx-12" svgIcon="powerOffIcon"></mat-icon>
         </div>
 
     </div>
 
 </mat-toolbar>
+            <mat-icon class="mx-12 powerIconCls" svgIcon="powerIcon"></mat-icon> -->
