--- a/src/app/allModules/pages/dashboard/dashboard.component.html
+++ b/src/app/allModules/pages/dashboard/dashboard.component.html
@@ -9,8 +9,9 @@
       </div>
     </mat-card> -->
     <div class="sidenav-content mt-4" fxFlex fxLayout>
-      <div fxFlex="70">
-        <div>
+      <div fxFlex="100">
+        <div class="topbarClass">
+
           <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column">
             <div fxFlex fxLayout>
               <div fxFlex>
@@ -31,6 +32,7 @@
               </div>
             </div>
           </mat-card>
+
           <mat-card class="tile m-12 py-12 pl-12 pr-0" fxFlex fxLayout="column">
             <div fxFlex fxLayout>
               <div fxFlex>
@@ -93,8 +95,16 @@
               </div>
             </div>
           </mat-card>
+
         </div>
+
         <div fxLayout="column" class="mt-12 mx-12">
+          <div fxFlex>
+            <mat-form-field style="width: 100%; float: right;">
+              <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
+            </mat-form-field>
+          </div>
+
           <div flex class="mt-10">
             <div class="tableData" #TABLE>
               <div style="overflow-x:auto;overflow-y:hidden ;">
@@ -110,17 +120,26 @@
                     <td mat-cell *matCellDef="let element"> {{element.TaskSubGroup}} </td>
                   </ng-container>
 
-                  <ng-container matColumnDef="Task">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Task </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Task}} </td>
+                  <ng-container matColumnDef="TaskName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Task Name</th>
+                    <td mat-cell *matCellDef="let element"> {{element.TaskName}} </td>
                   </ng-container>
 
-                  <ng-container matColumnDef="Report">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Report </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Report}} </td>
+                  <ng-container matColumnDef="OwnerName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Owner Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.OwnerName}} </td>
                   </ng-container>
 
+                  <ng-container matColumnDef="PlannedCompletionDate">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Planned Completion Date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.PlannedCompletionDate}} </td>
+                  </ng-container>
 
+                  <ng-container matColumnDef="Status">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                    <td mat-cell *matCellDef="let element"> {{element.Status}} </td>
+                  </ng-container>
+                  
                   <tr mat-header-row *matHeaderRowDef="displayedColumns;sticky: true"></tr>
                   <tr mat-row *matRowDef="let row; columns: displayedColumns;" matRipple style=" cursor: pointer;"></tr>
                 </table>
@@ -131,14 +150,14 @@
               </div>
             </div>
           </div>
+
           <div flex>
             <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
             </mat-paginator>
           </div>
         </div>
-
       </div>
-      <div fxFlex="30">
+      <!-- <div fxFlex="30">
         <div class="rightCard mt-8 mb-4">
           <div class="h2 m-8 mx-24 pt-12 subHeader">Open Tickets (5)</div>
           <div *ngFor="let ticket of AllTickets;let first=first" class="m-12 ticketTile p-12"
@@ -176,7 +195,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
   <mat-progress-spinner *ngIf="isProgressBarVisibile" class="progressBarPostion" color="accent" mode="indeterminate">
