--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="navbar-top" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
     <div class="buttons">
 
@@ -21,4 +23,19 @@
         <fuse-navigation layout="vertical"></fuse-navigation>
     </div>
 
+</div>
+<div class="navbar-down" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
+    <div fxLayout fxLayoutAlign="center" class="mx-8">
+        <div fxFlex fxLayoutAlign="center">
+            <img style="height: 14px" src="assets/images/dashboard/man-user.png">
+            <div class="buttons">
+                <div class="mx-12 username" fxHide.lt-lg>
+                    {{CurrentLoggedInUser | removeLeadingZero}}</div>
+            </div>
+        </div>
+    </div>
+    <mat-divider class="borderTop my-8"></mat-divider>
+    <div fxLayout fxLayoutAlign="center" class="mb-8">
+        <img src="assets/images/dashboard/power.png" (click)="logOutClick()" class="powerClass px-16">
+    </div>
 </div>
