--- a/src/app/allModules/pages/project/project.component.html
+++ b/src/app/allModules/pages/project/project.component.html
@@ -2,7 +2,7 @@
   <div class="center normal" style="margin-top: -27px !important;padding:32px 0px 1px !important;">
     <div fxLayout class="content-card1">
       <div fxFlex="30" class="side-bar">
-        <mat-card class="cardHeader p-8" style="height: 52px !important">
+        <mat-card class="cardHeader p-8" style="height: 52px !important;background-color: #fffdf9;">
           <div fxLayout fxFlex fxLayoutAlign="center" class="h2">
             <b>Projects (4)</b>
           </div>
@@ -19,22 +19,26 @@
             </mat-toolbar-row>
           </mat-toolbar>
 
-          <div class="highLight mx-8 my-4 p-8">
+          <mat-card class="highLight mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Project Title:DS</strong></div>
               <!-- <div fxFlex fxLayoutAlign="end">Owner:MS</div> -->
             </div>
-            <div style="font-size: 11px;margin-bottom: 5px">
-              <span style="margin-right: 10px">Owner:MS</span>
+            <div style="font-size: 11px">
+              <div style="margin-top: 10px;color: #2e2e2e">
+                <span style="margin-right: 10px">Owner:MS</span>
+              </div>
             </div>
-          </div>
+          </mat-card>
           <div class=" mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Project Title:E-way Bill</strong></div>
               <!-- <div fxFlex fxLayoutAlign="end">Owner:MS</div> -->
             </div>
-            <div style="font-size: 11px;margin-bottom: 5px">
-              <span style="margin-right: 10px">Owner:MS</span>
+            <div style="font-size: 11px">
+              <div style="margin-top: 10px;color: #2e2e2e">
+                <span style="margin-right: 10px">Owner:MS</span>
+              </div>
             </div>
           </div>
 
@@ -43,8 +47,10 @@
               <div fxFlex><strong>Project Title:Icon</strong></div>
               <!-- <div fxFlex fxLayoutAlign="end">Owner:MS</div> -->
             </div>
-            <div style="font-size: 11px;margin-bottom: 5px">
-              <span style="margin-right: 10px">Owner:MS</span>
+            <div style="font-size: 11px">
+              <div style="margin-top: 10px;color: #2e2e2e">
+                <span style="margin-right: 10px">Owner:MS</span>
+              </div>
             </div>
           </div>
           <div class=" mx-8 my-4 p-8">
@@ -52,32 +58,39 @@
               <div fxFlex><strong>Project Title:PM</strong></div>
               <!-- <div fxFlex fxLayoutAlign="end">Owner:MS</div> -->
             </div>
-            <div style="font-size: 11px;margin-bottom: 5px">
-              <span style="margin-right: 10px">Owner:MS</span>
+            <div style="font-size: 11px">
+              <div style="margin-top: 10px;color: #2e2e2e">
+                <span style="margin-right: 10px">Owner:MS</span>
+              </div>
             </div>
           </div>
         </div>
       </div>
       <div class="borderRight1"></div>
       <div fxFlex="70" class="side-bar">
-        <mat-card class="cardHeader p-8">
+        <mat-card class="cardHeader p-8" style="background-color: #fffdf9;">
+          <!-- <div fxLayout fxFlex class="h2" fxLayoutAlign="start">
+            <button mat-stroked-button color="warn" style="background-color: white;"><span style="color: #ef8377;">Delete</span></button>
+          </div> -->
           <div fxLayout fxFlex class="h2" fxLayoutAlign="end">
-            <!-- <button mat-stroked-button color="warn">Delete</button>
-            <button mat-stroked-button color="warn">Save</button> -->
-            <button mat-raised-button color="warn">Delete</button>
-            <button mat-raised-button color="accent" style="margin-left: 10px">Submit</button>
+            <button mat-stroked-button color="warn" style="background-color: white;"><span style="color: #ef8377;">Delete</span></button>
+            <button mat-raised-button  style="margin-left: 10px;background-color: #efb577;"><span style="color: white;">Save</span></button>
           </div>
         </mat-card>
         <div class="sidenav-content" fxFlex fxLayout="column">
           <mat-card style="margin-top: 5px;height: 100%;">
             <form autocomplete="off" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto" name="form" novalidate>
               <div fxLayout="row" fxLayoutAlign="start">
-                <mat-form-field class="pl-8" fxFlex>
-                  <input matInput placeholder="Title">
-                </mat-form-field>
-                <mat-form-field class="pl-8" fxFlex>
+                <div fxFlex="50">
+                  <mat-form-field class="pl-8" style="width: 80%;">
+                    <input matInput placeholder="Title">
+                  </mat-form-field>
+                </div>
+                <div fxFlex="50">
+                <mat-form-field class="pl-8" style="width: 100%;">
                   <input matInput placeholder="Owner">
                 </mat-form-field>
+              </div>
               </div>
             
               <!-- <div fxLayout="row" fxLayoutAlign="start">
@@ -91,6 +104,13 @@
                   <button mat-fab color="#f6b570"><mat-icon>add</mat-icon></button>
                 </div>
               </div> -->
+              <div fxLayout>
+                <div fxFlex fxLayoutAlign="end">
+                  <button class="float" mat-fab style="background-color: #f6b570">
+                    <mat-icon style="color: white;">add</mat-icon>
+                  </button>
+                </div>
+              </div>
             </form>
           </mat-card>
         </div>
