--- a/src/app/allModules/pages/project/project.component.scss
+++ b/src/app/allModules/pages/project/project.component.scss
@@ -79,11 +79,12 @@
     line-height: 36px;
     padding: 8px;
     font-size: 13px;
-    border-radius: 18px;
+    // border-radius: 18px;
     border: 1px solid;
     overflow: hidden;
-    background-color: #fafafa;
-    border-color: rgba(0, 0, 0, 0.12);
+    background-color: #ffffff;
+    border-color: #ffffff;
+    // border-color: rgba(0, 0, 0, 0.12);
     @include mat-elevation(1);
 
     mat-icon.s-16 {
@@ -97,7 +98,7 @@
 
     input {
       padding: 0 12px 0 8px;
-      background-color: #fafafa;
+      background-color: #ffffff;;
       height: 36px;
       border: none;
     }
@@ -200,5 +201,9 @@
   .borderclass{
     border-bottom: 2px solid #efb577 !important;
     margin-left: 10px !important;
+  }
+  .float {
+    position: fixed;
+    bottom: 80px !important;
   }
 }
