--- a/src/app/allModules/pages/project/project.component.scss
+++ b/src/app/allModules/pages/project/project.component.scss
@@ -165,6 +165,12 @@
     margin-left: 20px;
     margin-top: 8px;
   }
+  .unselecthighLight {
+    // background: lightgray;
+    border-left: 5px solid #cccccc;
+    background-color: white;
+    margin-top: 10px !important;
+  }
   .round1V {
     width: 10px;
     height: 10px;
