--- a/src/app/allModules/pages/project/project.component.html
+++ b/src/app/allModules/pages/project/project.component.html
@@ -30,7 +30,8 @@
               </div>
             </div>
           </mat-card>
-          <div class=" mx-8 my-4 p-8">
+
+          <div class="unselecthighLight mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Project Title:E-way Bill</strong></div>
               <!-- <div fxFlex fxLayoutAlign="end">Owner:MS</div> -->
@@ -42,7 +43,7 @@
             </div>
           </div>
 
-          <div class=" mx-8 my-4 p-8">
+          <div class="unselecthighLight mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Project Title:Icon</strong></div>
               <!-- <div fxFlex fxLayoutAlign="end">Owner:MS</div> -->
@@ -53,7 +54,7 @@
               </div>
             </div>
           </div>
-          <div class=" mx-8 my-4 p-8">
+          <div class="unselecthighLight mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Project Title:PM</strong></div>
               <!-- <div fxFlex fxLayoutAlign="end">Owner:MS</div> -->
