--- a/src/app/allModules/pages/task/task.component.html
+++ b/src/app/allModules/pages/task/task.component.html
@@ -43,7 +43,7 @@
             </mat-card> -->
           </div>
 
-          <div class=" mx-8 my-4 p-8">
+          <div class="unselecthighLight mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Tick Number:2345</strong></div>
               <div fxFlex fxLayoutAlign="end">24 / 03 / 2020</div>
@@ -54,7 +54,7 @@
               </div>
             </div>
           </div>
-          <div class=" mx-8 my-4 p-8">
+          <div class="unselecthighLight mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Tick Number:3456</strong></div>
               <div fxFlex fxLayoutAlign="end">24 / 03 / 2020</div>
@@ -65,7 +65,7 @@
               </div>
             </div>
           </div>
-          <div class=" mx-8 my-4 p-8">
+          <div class="unselecthighLight mx-8 my-4 p-8">
             <div fxLayout fxLayoutAlign="space-between center">
               <div fxFlex><strong>Tick Number:4567</strong></div>
               <div fxFlex fxLayoutAlign="end">24 / 03 / 2020</div>
@@ -152,18 +152,18 @@
                       <input matInput placeholder="Field">
                     </mat-form-field>
                   </div>
-                  <div fxFlex="30">
+                  <div fxFlex="30" style="margin-left: 30px">
                     <mat-form-field class="pl-8" style="width: 80%;">
                       <input matInput placeholder="Validation">
                     </mat-form-field>
                   </div>
-                  <div fxFlex="30">
-                    <mat-form-field class="pl-8" style="width: 80%;">
+                  <div>
+                    <mat-form-field class="pl-8" style="width: 100%;margin-left: 30px">
                       <input matInput placeholder="Remarks">
                     </mat-form-field>
                   </div>
-                  <div fxFlex="10">
-                    <img style="height: 20px;margin-top: 25px;" src="assets/images/logos/add-button.png">
+                  <div fxFlex="10" style="margin-left: 25px;">
+                    <img style="height: 20px;margin-top: 25px;margin-left: 65px;" src="assets/images/logos/add-button.png">
                   </div>
                 </div>
                 <div style="margin-left: 8px;margin-top: 10px;">
@@ -208,17 +208,17 @@
                       <input matInput placeholder="Field">
                     </mat-form-field>
                   </div>
-                  <div fxFlex="25">
+                  <div fxFlex="20" style="margin-left: 45px">
                     <mat-form-field class="pl-8" style="width: 80%;">
                       <input matInput placeholder="Field">
                     </mat-form-field>
                   </div>
-                  <div fxFlex="25">
+                  <div fxFlex="20" style="margin-left: 45px;">
                     <mat-form-field class="pl-8" style="width: 80%;">
                       <input matInput placeholder="Validation">
                     </mat-form-field>
                   </div>
-                  <div fxFlex="25">
+                  <div fxFlex="25" style="margin-left: 45px;">
                     <mat-form-field class="pl-8" style="width: 80%;">
                       <input matInput placeholder="Remarks">
                     </mat-form-field>
@@ -352,7 +352,24 @@
                 </div>
               </div>
               <div fxLayout="row" fxLayoutAlign="start">
+
                 <div fxFlex="50">
+                  <div style="margin-left: 7px">
+                    <span><strong>Sketch</strong></span>
+                  </div>
+                  <div style="margin-left: 7px;margin-top: 15px">
+                    <!-- <span>Attachments</span> -->
+                   <span style="color: #4784f7;"> + Add an Attachment. </span> 
+                  </div>
+                </div>
+                <div fxFlex="50">
+                  <!-- <div style="margin-left: 7px">
+                    <span>Attachments</span>
+                   <span style="color: #4784f7;"> + Add an Attachment. </span> 
+                  </div> -->
+                </div>
+
+                <!-- <div fxFlex="50">
                   <div style="margin-left: 7px">
                     <span><strong>Sketch Table</strong></span>
                   </div>
@@ -392,15 +409,9 @@
                       <mat-paginator [pageSizeOptions]="[10, 20, 30, 50, 75, 100]" showFirstLastButtons>
                       </mat-paginator>
                     </div>
-                    <!-- </div> -->
                   </div>
-                </div>
-                <div fxFlex="50">
-                  <!-- <div style="margin-left: 7px">
-                    <span>Attachments</span>
-                   <span style="color: #4784f7;"> + Add an Attachment. </span> 
-                  </div> -->
-                </div>
+                </div> -->
+                
               </div>
               <div fxLayout>
                 <div fxFlex fxLayoutAlign="end">
