Role Page design changes..

--- a/src/app/allModules/master/user/user.component.html
+++ b/src/app/allModules/master/user/user.component.html
@@ -30,7 +30,7 @@
                                 </div>
                                 <div style="font-size: 11px">
                                     <div style="margin-top: 10px;color: #2e2e2e">
-                                        <span style="margin-right: 10px">{{usr.UserName}}</span>
+                                        <span style="margin-right: 10px">{{usr.email}}</span>
                                     </div>
                                 </div>
                             </div>
