--- a/src/app/allModules/pages/task-group/task-group.component.scss
+++ b/src/app/allModules/pages/task-group/task-group.component.scss
@@ -1,6 +1,19 @@
 @import "src/@fuse/scss/fuse";
 
-#chat {
+#taskgroup {
+  .progressBarPostion {
+    position: absolute !important;
+    bottom: 50%;
+    z-index: 1;
+    left: 55%;
+  }
+
+  .leftCard {
+    @include mat-elevation(2);
+    background: white;
+    border-left: 5px solid #efb577;
+    margin-left: 20px;
+  }
   .center {
     padding: 32px !important;
     max-width: 2000px;
