--- a/src/app/allModules/pages/task/task.component.html
+++ b/src/app/allModules/pages/task/task.component.html
@@ -4,7 +4,7 @@
       <div fxFlex="23" class="side-bar">
         <mat-card class="cardHeader p-8" style="height: 52px !important;background-color: #fffdf9;">
           <div fxLayout fxFlex fxLayoutAlign="center" class="h2">
-            <b>Task (4)</b>
+            <b>Task ({{AllTasks.length}})</b>
           </div>
         </mat-card>
         <div class="sidenav-header" style="background-color: #f5f5f5;">
@@ -18,74 +18,42 @@
               </div>
             </mat-toolbar-row>
           </mat-toolbar>
-
           <div>
-            <mat-card class="highLight mx-8 my-4 p-8">
-              <div fxLayout fxLayoutAlign="space-between center">
-                <div fxFlex><strong>Tick Number:1234</strong></div>
-                <div fxFlex fxLayoutAlign="end">24 / 03 / 2020</div>
-              </div>
-              <div style="font-size: 11px">
-                <div style="margin-top: 10px;color: #2e2e2e">
-                  <span style="margin-right: 10px">china.mastan@exalca.com</span>
+            <div class="sidenav-content" fusePerfectScrollbar fxFlex>
+              <div *ngFor="let usr of AllTasks | filter: searchText">
+                <div>
+                  <div class="mx-8 mb-8 mt-0 p-8 leftCard" (click)="loadSelectedTask(usr)"
+                    [style.border-left-color]="selectID==usr.TaskID?'#efb577':'#cccccc'">
+                    <div fxLayout fxLayoutAlign="space-between center">
+                      <div fxFlex><strong>{{usr.Title}}</strong></div>
+                    </div>
+                    <div style="font-size: 11px">
+                      <div style="margin-top: 10px;color: #2e2e2e">
+                        <span style="margin-right: 10px">{{usr.Type}}</span>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </mat-card>
-            <!-- <mat-card *ngFor="let ada of AllSources | filter: searchText" class="mx-8 my-4 p-8"
-              [class.highLight]="SelectedSourceID==ada.srcID" (click)="LoadSelectedSRCH(ada)">
-              <div fxLayout fxLayoutAlign="space-between center">
-                <div fxFlex>{{ada.Title}}</div>
-                <div fxFlex fxLayoutAlign="end">{{ada.CreatedOn | date}}</div>
+              <div *ngIf="(AllTasks | filter: searchText).length === 0" class="no-results-message">
+                <span class="pl-12"> No results..</span>
               </div>
-              <div style="font-size: 11px;margin-bottom: 5px">
-                <span style="margin-right: 10px">{{ada.Type}}</span>
-              </div>
-            </mat-card> -->
-          </div>
+            </div>
 
-          <div class="unselecthighLight mx-8 my-4 p-8">
-            <div fxLayout fxLayoutAlign="space-between center">
-              <div fxFlex><strong>Tick Number:2345</strong></div>
-              <div fxFlex fxLayoutAlign="end">24 / 03 / 2020</div>
-            </div>
-            <div style="font-size: 11px">
-              <div style="margin-top: 10px;color: #2e2e2e">
-                <span style="margin-right: 10px">china.mastan@exalca.com</span>
-              </div>
-            </div>
-          </div>
-          <div class="unselecthighLight mx-8 my-4 p-8">
-            <div fxLayout fxLayoutAlign="space-between center">
-              <div fxFlex><strong>Tick Number:3456</strong></div>
-              <div fxFlex fxLayoutAlign="end">24 / 03 / 2020</div>
-            </div>
-            <div style="font-size: 11px">
-              <div style="margin-top: 10px;color: #2e2e2e">
-                <span style="margin-right: 10px">china.mastan@exalca.com</span>
-              </div>
-            </div>
-          </div>
-          <div class="unselecthighLight mx-8 my-4 p-8">
-            <div fxLayout fxLayoutAlign="space-between center">
-              <div fxFlex><strong>Tick Number:4567</strong></div>
-              <div fxFlex fxLayoutAlign="end">24 / 03 / 2020</div>
-            </div>
-            <div style="font-size: 11px">
-              <div style="margin-top: 10px;color: #2e2e2e">
-                <span style="margin-right: 10px">china.mastan@exalca.com</span>
-              </div>
-            </div>
           </div>
         </div>
+        <div class="borderRight1"></div>
       </div>
-      <div class="borderRight1"></div>
       <div fxFlex="77" class="side-bar">
         <mat-card class="cardHeader p-8" style="background-color: #fffdf9;">
           <div fxLayout fxFlex class="h2" fxLayoutAlign="end">
-            <button mat-stroked-button color="warn" style="background-color: white;"><span
-                style="color: #ef8377;">Delete</span></button>
-            <button mat-raised-button style="margin-left: 10px;background-color: #efb577;"><span
-                style="color: white;">Save</span></button>
+            <button (click)="DeleteClicked()" class="DeleteBtn mr-12" *ngIf="SelectedTask.TaskID" mat-stroked-button>
+              Delete</button>
+            <button mat-raised-button class="mr-12" (click)="ResetControl()" *ngIf="!SelectedTask.TaskID">
+              Clear
+            </button>
+            <button (click)="SaveClicked()" class="SaveBtn" mat-raised-button>
+              {{SelectedTask.TaskID?'Update':'Create'}}</button>
           </div>
         </mat-card>
         <div class="sidenav-content" fxFlex fxLayout="column">
@@ -163,7 +131,8 @@
                     </mat-form-field>
                   </div>
                   <div fxFlex="10" style="margin-left: 25px;">
-                    <img style="height: 20px;margin-top: 25px;margin-left: 65px;" src="assets/images/logos/add-button.png">
+                    <img style="height: 20px;margin-top: 25px;margin-left: 65px;"
+                      src="assets/images/logos/add-button.png">
                   </div>
                 </div>
                 <div style="margin-left: 8px;margin-top: 10px;">
@@ -359,7 +328,7 @@
                   </div>
                   <div style="margin-left: 7px;margin-top: 15px">
                     <!-- <span>Attachments</span> -->
-                   <span style="color: #4784f7;"> + Add an Attachment. </span> 
+                    <span style="color: #4784f7;"> + Add an Attachment. </span>
                   </div>
                 </div>
                 <div fxFlex="50">
@@ -411,7 +380,7 @@
                     </div>
                   </div>
                 </div> -->
-                
+
               </div>
               <div fxLayout>
                 <div fxFlex fxLayoutAlign="end">
