--- a/src/app/allModules/master/user/user.component.scss
+++ b/src/app/allModules/master/user/user.component.scss
@@ -232,6 +232,7 @@
     background: white;
     border-left: 5px solid #efb577;
     margin-left: 20px;
+    cursor: pointer;
   }
   .mat-toolbar-multiple-rows {
     min-height: 58px !important;
